--- a/src/main/resources/templates/admin/admin-album-update.html
+++ b/src/main/resources/templates/admin/admin-album-update.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>앨범 수정 | PeachMusic Admin</title>
 
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" href="/css/layout.css" />
     <link rel="stylesheet" href="/css/admin-album-update.css" />
 
@@ -23,7 +24,7 @@
             </div>
 
             <div class="page-actions">
-                <a class="btn btn-ghost" th:href="@{/admin/albums}">목록으로</a>
+                <a class="btn btn-back" th:href="@{/admin/albums}">목록으로</a>
             </div>
         </header>
 
