--- a/src/main/resources/templates/admin/admin-artist-create.html
+++ b/src/main/resources/templates/admin/admin-artist-create.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>아티스트 등록 | PeachMusic Admin</title>
 
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" href="/css/layout.css"/>
     <link rel="stylesheet" href="/css/admin-artist-create.css"/>
 
