--- a/src/main/resources/templates/artist/artist-songs.html
+++ b/src/main/resources/templates/artist/artist-songs.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>음원 전체</title>
 
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" href="/css/layout.css" />
     <link rel="stylesheet" href="/css/artist-songs.css" />
     <script th:src="@{/js/sidebar.js}" defer></script>
