--- a/src/main/resources/templates/admin/admin-song-update.html
+++ b/src/main/resources/templates/admin/admin-song-update.html
@@ -98,7 +98,7 @@
                             <div class="kv"><div class="k">수록 순서</div><div class="v" id="curPosition">-</div></div>
                             <div class="kv"><div class="k">좋아요</div><div class="v" id="curLikeCount">0</div></div>
                             <div class="kv"><div class="k">재생 수</div><div class="v" id="curPlayCount">0</div></div>
-                            <div class="kv"><div class="k">삭제 여부</div><div class="v" id="curDeleted">-</div></div>
+                            <div class="kv"><div class="k">상태</div><div class="v" id="curDeleted">-</div></div>
                             <div class="kv"><div class="k">스트리밍</div><div class="v" id="curProgress">-</div></div>
                             <div class="kv"><div class="k">길이(초)</div><div class="v" id="curDurationSec">-</div></div>
                             <div class="kv"><div class="k">장르</div><div class="v" id="curGenres">-</div></div>
