--- a/src/main/resources/templates/admin/admin-artist-update.html
+++ b/src/main/resources/templates/admin/admin-artist-update.html
@@ -82,7 +82,7 @@
                         <button type="button" class="btn btn-ghost" id="btnToggleCurrent">현재 값 보기</button>
                     </div>
 
-                    <div class="card-body hidden" id="currentBody">
+                    <div class="card-body" id="currentBody">
                         <div class="kv-grid">
                             <div class="kv"><div class="k">ID</div><div class="v" th:text="${artist.artistId}">-</div></div>
                             <div class="kv"><div class="k">이름</div><div class="v" th:text="${artist.artistName}">-</div></div>
